--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <div id="app">
+
+    <!-- LOGIN -->
     <div id="login" class="auth">
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
@@ -17,6 +19,7 @@
       </div>
     </div>
 
+    <!-- MAIN -->
     <div id="main" style="display:none">
       <nav class="nav">
         <a data-view="home" class="active">Dashboard</a>
@@ -28,7 +31,10 @@
       </nav>
 
       <div class="container">
+
+        <!-- DASHBOARD -->
         <section id="home">
+          <!-- KPIs -->
           <div class="section">
             <h2>Overview</h2>
             <div class="kpis">
@@ -40,25 +46,54 @@
             </div>
           </div>
 
+          <!-- Lifetime Product Performance (GLOBAL) -->
           <div class="section">
-            <h2>Total Stock &amp; Ad Spend by Country</h2>
-            <table id="stockByCountryTable" class="table">
-              <thead><tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr></thead>
-              <tbody id="stockByCountryBody"></tbody>
-              <tfoot><tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00</th></tr></tfoot>
+            <h2>Lifetime Product Performance</h2>
+            <div class="row wrap">
+              <select id="lpProduct" class="input"><option value="">All products</option></select>
+              <input id="lpStart" type="date" class="input"/>
+              <input id="lpEnd" type="date" class="input"/>
+              <button id="lpRun" class="btn">Run</button>
+            </div>
+            <table class="table" id="lifetimeTable">
+              <thead><tr>
+                <th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
+              </tr></thead>
+              <tbody id="lifetimeBody"></tbody>
+              <tfoot>
+                <tr class="totals"><th colspan="2">Totals</th>
+                  <th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th>
+                </tr>
+              </tfoot>
             </table>
           </div>
 
+          <!-- Total Stock & Ad Spend by Country -->
+          <div class="section">
+            <h2>Total Stock &amp; Ad Spend by Country</h2>
+            <table id="stockByCountryTable" class="table">
+              <thead>
+                <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
+              </thead>
+              <tbody id="stockByCountryBody"></tbody>
+              <tfoot>
+                <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00</th></tr>
+              </tfoot>
+            </table>
+          </div>
+
+          <!-- Weekly Delivered -->
           <div class="section">
             <h2>Weekly Delivered (Mon → Sun)</h2>
             <div class="card">
               <div class="row wrap">
                 <button id="weeklyPrev" class="btn outline">◀ Prev week</button>
-                <div class="badge" id="weeklyRange">Week:</div>
+                <div class="badge" id="weeklyRange">Week: </div>
                 <button id="weeklyNext" class="btn outline">Next week ▶</button>
                 <button id="weeklySave" class="btn">Save</button>
                 <button id="weeklyReset" class="btn danger outline">Reset</button>
               </div>
+              <small>The grid lists every country in your system (excluding China). Enter delivered pieces per day and Save.</small>
             </div>
             <div class="table-scroll">
               <table id="weeklyTable" class="table compact">
@@ -75,6 +110,7 @@
             </div>
           </div>
 
+          <!-- Daily Advertising Spend -->
           <div class="section">
             <h2>Daily Advertising Spend</h2>
             <div class="card">
@@ -89,9 +125,11 @@
                 <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
                 <button id="adSave" class="btn">Save/Replace</button>
               </div>
+              <small>Saving again for the same product + platform + country replaces the previous value.</small>
             </div>
           </div>
 
+          <!-- Stock Movement -->
           <div class="section">
             <h2>Stock Movement</h2>
             <div class="card">
@@ -104,25 +142,33 @@
                 <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
                 <button id="mvAdd" class="btn">Add Movement</button>
               </div>
+              <small>Only China is the purchasing source; on arrival, stock is added to destination and deducted from origin.</small>
             </div>
           </div>
 
+          <!-- Transit China → Kenya -->
           <div class="section">
             <h2>Transit (China → Kenya)</h2>
             <table class="table" id="shipCK">
-              <thead><tr><th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr></thead>
+              <thead><tr>
+                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+              </tr></thead>
               <tbody id="shipCKBody"></tbody>
             </table>
           </div>
 
+          <!-- Transit Inter-country -->
           <div class="section">
             <h2>Transit (Inter-country)</h2>
             <table class="table" id="shipIC">
-              <thead><tr><th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th></tr></thead>
+              <thead><tr>
+                <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+              </tr></thead>
               <tbody id="shipICBody"></tbody>
             </table>
           </div>
 
+          <!-- Profit by Country -->
           <div class="section">
             <h2>Profit by Country</h2>
             <div class="row wrap">
@@ -132,12 +178,19 @@
               <button id="pcRun" class="btn">Run</button>
             </div>
             <table class="table" id="profitCountry">
-              <thead><tr><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th></tr></thead>
+              <thead><tr>
+                <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th>
+              </tr></thead>
               <tbody id="profitCountryBody"></tbody>
-              <tfoot><tr class="totals"><th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th></tr></tfoot>
+              <tfoot>
+                <tr class="totals">
+                  <th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th>
+                </tr>
+              </tfoot>
             </table>
           </div>
 
+          <!-- To-Do -->
           <div class="section">
             <h2>To-Do</h2>
             <div class="row">
@@ -147,27 +200,14 @@
             <div id="todoList" class="todo-list"></div>
           </div>
 
+          <!-- Weekly To-Do -->
           <div class="section">
             <h2>Weekly To-Do</h2>
             <div id="weeklyWrap" class="weeks"></div>
           </div>
-
-          <div class="section">
-            <h2>Lifetime Product Performance</h2>
-            <div class="row wrap">
-              <select id="lpProduct" class="input"><option value="">All products</option></select>
-              <input id="lpStart" type="date" class="input"/>
-              <input id="lpEnd" type="date" class="input"/>
-              <button id="lpRun" class="btn">Run</button>
-            </div>
-            <table class="table" id="lifetimeTable">
-              <thead><tr><th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th></tr></thead>
-              <tbody id="lifetimeBody"></tbody>
-              <tfoot><tr class="totals"><th colspan="2">Totals</th><th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th></tr></tfoot>
-            </table>
-          </div>
         </section>
 
+        <!-- PRODUCTS -->
         <section id="products" style="display:none">
           <h2>Products</h2>
           <div class="card">
@@ -181,15 +221,17 @@
               <button id="pAdd" class="btn">Add</button>
             </div>
           </div>
-
           <table id="productsTable" class="table">
             <thead><tr><th>Name</th><th>SKU</th><th>Status</th><th>Actions</th></tr></thead>
             <tbody></tbody>
           </table>
+          <small>Use <b>Open</b> to view product page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
         </section>
 
+        <!-- PERFORMANCE -->
         <section id="performance" style="display:none">
           <h2>Performance</h2>
+
           <div class="card">
             <div class="h">Top Delivered Products</div>
             <div class="row wrap">
@@ -200,11 +242,13 @@
               </select>
               <input id="pfStart" type="date" class="input"/>
               <input id="pfEnd" type="date" class="input"/>
-              <select id="pfCountry" class="input"></select>
+              <select id="pfCountry" class="input"><option value="">All countries</option></select>
               <button id="pfRun" class="btn">Run</button>
             </div>
             <table id="pfTable" class="table">
-              <thead><tr><th>Product</th><th>Country</th><th>Pieces</th><th>Ad Spend</th><th>Product Cost</th><th>Total Profit</th><th>Profit / pc</th></tr></thead>
+              <thead><tr>
+                <th>Product</th><th>Country</th><th>Pieces</th><th>Ad Spend</th><th>Product Cost</th><th>Total Profit</th><th>Profit / pc</th>
+              </tr></thead>
               <tbody></tbody>
             </table>
           </div>
@@ -227,38 +271,69 @@
           </div>
         </section>
 
+        <!-- FINANCE -->
         <section id="finance" style="display:none">
           <h2>Finance</h2>
-          <div class="card big-balance"><div class="h">Running Balance (All-time)</div><div id="runBalance" class="balance">0.00 USD</div></div>
+
+          <div class="card big-balance">
+            <div class="h">Running Balance (All-time)</div>
+            <div id="feRunning" class="balance">0.00 USD</div>
+          </div>
+
           <div class="card">
             <div class="h">Categories</div>
             <div class="row wrap">
-              <select id="fcType" class="input"><option value="debit">Debit</option><option value="credit">Credit</option></select>
+              <select id="fcType" class="input">
+                <option value="debit">Debit</option>
+                <option value="credit">Credit</option>
+              </select>
               <input id="fcName" class="input" placeholder="Category name"/>
               <button id="fcAdd" class="btn">Add Category</button>
             </div>
             <div class="row cats">
-              <div><h4>Debits</h4><div id="fcDebits" class="chips"></div></div>
-              <div><h4>Credits</h4><div id="fcCredits" class="chips"></div></div>
+              <div>
+                <h4>Debits</h4>
+                <div id="fcDebits" class="chips"></div>
+              </div>
+              <div>
+                <h4>Credits</h4>
+                <div id="fcCredits" class="chips"></div>
+              </div>
             </div>
           </div>
+
           <div class="card">
             <div class="h">Entries</div>
             <div class="row wrap">
-              <input id="feStart" type="date" class="input"/>
-              <input id="feEnd" type="date" class="input"/>
-              <select id="feType" class="input"><option value="debit">Debit</option><option value="credit">Credit</option></select>
+              <input id="feDate" type="date" class="input"/>
+              <select id="feType" class="input">
+                <option value="debit">Debit</option>
+                <option value="credit">Credit</option>
+              </select>
               <select id="feCat" class="input"></select>
               <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
               <input id="feNote" class="input" placeholder="Note"/>
               <button id="feAdd" class="btn">Add Entry</button>
             </div>
-            <table id="feTable" class="table"><thead><tr><th>Date</th><th>Type</th><th>Category</th><th>Amount</th><th>Note</th><th></th></tr></thead><tbody></tbody></table>
+
+            <div class="row wrap">
+              <input id="fes" type="date" class="input"/>
+              <input id="fee" type="date" class="input"/>
+              <button id="feRun" class="btn outline">Run</button>
+              <div id="feBalance" class="badge">Period Balance: —</div>
+            </div>
+
+            <table id="feTable" class="table">
+              <thead><tr><th>Date</th><th>Type</th><th>Category</th><th>Amount</th><th>Note</th><th></th></tr></thead>
+              <tbody></tbody>
+            </table>
           </div>
         </section>
 
+        <!-- SETTINGS -->
         <section id="settings" style="display:none">
           <h2>Settings</h2>
+
           <div class="card">
             <div class="h">Countries</div>
             <div class="row">
@@ -267,6 +342,7 @@
             </div>
             <div id="ctyList" class="chips deletable"></div>
           </div>
+
           <div class="card">
             <div class="h">Edit Product Info</div>
             <div class="row wrap">
@@ -279,6 +355,7 @@
               <button id="epSave" class="btn">Save Changes</button>
             </div>
           </div>
+
           <div class="card">
             <div class="h">Manual Save &amp; Restore</div>
             <div class="row">
@@ -291,9 +368,11 @@
             </table>
           </div>
         </section>
+
       </div>
     </div>
   </div>
+
   <script src="/public/app.js"></script>
 </body>
 </html>
