--- a/public/product.html
+++ b/public/product.html
@@ -3,32 +3,55 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>EAS Tracker - Product</title>
-  <link rel="stylesheet" href="/styles.css"/>
+  <title>EAS Tracker – Product</title>
+<link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <div class="container">
+
     <nav class="nav">
       <a href="/" class="active">← Dashboard</a>
-      <span class="nav-right" id="pdTransitBadge">Loading...</span>
+      <span class="nav-right" id="pdTransitBadge">Transit total: 0</span>
     </nav>
 
     <header style="margin:12px 0 20px">
-      <h1 id="pdTitle">Product Details</h1>
+      <h1 id="pdTitle">Product</h1>
       <div id="pdSku" class="muted"></div>
     </header>
 
-    <div class="section">
-      <h2>Stock & Ad Spend</h2>
+    <!-- Stock & Ad Spend by Country (this product only) -->
+    <section class="section">
+      <h2>Stock &amp; Ad Spend by Country</h2>
       <table class="table">
-        <thead><tr><th>Country</th><th>Stock</th><th>Ad Spend</th></tr></thead>
+        <thead>
+          <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
+        </thead>
         <tbody id="pdStockBody"></tbody>
-        <tfoot><tr class="totals"><th>Total</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0</th></tr></tfoot>
+        <tfoot>
+          <tr class="totals"><th>Totals</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0</th></tr>
+        </tfoot>
       </table>
-    </div>
+    </section>
 
-    <div class="section">
-      <h2>Ad Spend</h2>
+    <!-- Profit + Advertising Budget (per country) – manual -->
+    <section class="section">
+      <h2>Profit + Advertising Budget (per country)</h2>
+      <div class="card">
+        <div class="row wrap">
+          <select id="pdPBCountry" class="input"></select>
+          <input id="pdPBValue" type="number" class="input" placeholder="Budget (USD)" min="0" step="0.01"/>
+          <button id="pdPBSave" class="btn">Save</button>
+        </div>
+      </div>
+      <table class="table">
+        <thead><tr><th>Country</th><th>Budget (USD)</th><th></th></tr></thead>
+        <tbody id="pdPBBBody"></tbody>
+      </table>
+    </section>
+
+    <!-- Daily Ad Spend (Replace current) -->
+    <section class="section">
+      <h2>Daily Ad Spend (Replace current)</h2>
       <div class="card">
         <div class="row wrap">
           <select id="pdAdCountry" class="input"></select>
@@ -37,34 +60,150 @@
             <option value="tiktok">TikTok</option>
             <option value="google">Google</option>
           </select>
-          <input id="pdAdAmount" type="number" class="input" placeholder="Amount USD" step="0.01"/>
-          <button id="pdAdSave" class="btn">Save</button>
+          <input id="pdAdAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
+          <button id="pdAdSave" class="btn">Save/Replace</button>
         </div>
       </div>
       <table class="table">
-        <thead><tr><th>Country</th><th>Platform</th><th>Amount</th></tr></thead>
+        <thead><tr><th>Country</th><th>Platform</th><th>Amount (USD)</th></tr></thead>
         <tbody id="pdAdBody"></tbody>
       </table>
-    </div>
+    </section>
 
-    <div class="section">
-      <h2>Remittances</h2>
+    <!-- Stock Movement -->
+    <section class="section">
+      <h2>Stock Movement</h2>
+      <div class="card">
+        <div class="row wrap">
+          <select id="pdMvFrom" class="input"></select>
+          <span>→</span>
+          <select id="pdMvTo" class="input"></select>
+          <input id="pdMvQty" type="number" class="input" placeholder="Qty" min="0"/>
+          <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
+          <button id="pdMvAdd" class="btn">Add Movement</button>
+        </div>
+        <small>China is only available for movements &amp; transit.</small>
+      </div>
+    </section>
+
+    <!-- Transit: China → Kenya -->
+    <section class="section">
+      <h2>Transit (China → Kenya)</h2>
       <table class="table">
-        <thead><tr><th>Period</th><th>Country</th><th>Pieces</th><th>Revenue</th><th>Profit</th></tr></thead>
+        <thead><tr>
+          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+        </tr></thead>
+        <tbody id="pdShipCKBody"></tbody>
+      </table>
+    </section>
+
+    <!-- Transit: Inter-country -->
+    <section class="section">
+      <h2>Transit (Inter-country)</h2>
+      <table class="table">
+        <thead><tr>
+          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
+        </tr></thead>
+        <tbody id="pdShipICBody"></tbody>
+      </table>
+    </section>
+
+    <!-- Arrived Shipments (history for this product) -->
+    <section class="section">
+      <h2>Arrived Shipments</h2>
+      <table class="table">
+        <thead><tr>
+          <th>ID</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th>
+        </tr></thead>
+        <tbody id="pdShipArrivedBody"></tbody>
+      </table>
+    </section>
+
+    <!-- Remittance Entries (pulled from Performance → Remittance Report) -->
+    <section class="section">
+      <h2>Remittance Entries</h2>
+      <table class="table">
+        <thead><tr>
+          <th>Period</th><th>Country</th><th>Orders</th><th>Pieces</th><th>Revenue</th><th>Ad Spend</th><th>Extra/pc</th><th>Profit</th><th></th>
+        </tr></thead>
         <tbody id="pdRBody"></tbody>
-        <tfoot><tr class="totals"><th colspan="3">Total</th><th id="pdRRevT">0</th><th id="pdRProfitT">0</th></tr></tfoot>
+        <tfoot>
+          <tr class="totals">
+            <th colspan="4">Totals</th>
+            <th id="pdRRevT">0</th>
+            <th id="pdRAdT">0</th>
+            <th id="pdRExtraT">0</th>
+            <th id="pdRProfitT">0</th>
+            <th></th>
+          </tr>
+        </tfoot>
       </table>
-    </div>
+    </section>
 
-    <div class="section">
-      <h2>Transit</h2>
+    <!-- Lifetime (This Product) -->
+    <section class="section">
+      <h2>Lifetime (This Product)</h2>
+      <div class="card">
+        <div class="row wrap">
+          <input id="pdLPStart" type="date" class="input"/>
+          <input id="pdLPEnd" type="date" class="input"/>
+          <button id="pdLPRun" class="btn">Run</button>
+        </div>
+      </div>
       <table class="table">
-        <thead><tr><th>Route</th><th>Qty</th><th>Status</th><th>Actions</th></tr></thead>
-        <tbody id="pdShipBody"></tbody>
+        <thead><tr>
+          <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
+        </tr></thead>
+        <tbody id="pdLPBody"></tbody>
+        <tfoot>
+          <tr class="totals">
+            <th>Totals</th>
+            <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
+            <th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
+          </tr>
+        </tfoot>
       </table>
-    </div>
+    </section>
+
+    <!-- Influencer Spend -->
+    <section class="section">
+      <h2>Influencer Spend</h2>
+
+      <div class="card">
+        <div class="h">Add Influencer</div>
+        <div class="row wrap">
+          <input id="pdInfName" class="input" placeholder="Influencer Name"/>
+          <input id="pdInfSocial" class="input" placeholder="Social @handle"/>
+          <select id="pdInfCountry" class="input"></select>
+          <button id="pdInfAdd" class="btn">Add Influencer</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="h">Add Spend</div>
+        <div class="row wrap">
+          <input id="pdInfDate" type="date" class="input"/>
+          <select id="pdInfSelect" class="input"></select>
+          <select id="pdInfFilterCountry" class="input"><option value="">All countries</option></select>
+          <input id="pdInfAmount" type="number" class="input" min="0" step="0.01" placeholder="Spend (USD)"/>
+          <button id="pdInfSpendAdd" class="btn">Add Spend</button>
+        </div>
+        <div class="row wrap" style="margin-top:8px">
+          <input id="pdInfStart" type="date" class="input"/>
+          <input id="pdInfEnd" type="date" class="input"/>
+          <button id="pdInfRun" class="btn outline">Filter</button>
+          <div class="badge">Total: <span id="pdInfTotal">0</span> USD</div>
+        </div>
+      </div>
+
+      <table class="table">
+        <thead><tr><th>Date</th><th>Country</th><th>Influencer</th><th>Social</th><th>Spend (USD)</th><th></th></tr></thead>
+        <tbody id="pdInfBody"></tbody>
+      </table>
+    </section>
+
   </div>
 
-  <script src="/app.js"></script>
+<script src="/app.js" defer></script>
 </body>
 </html>
