--- a/public/product.html
+++ b/public/product.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EAS Tracker – Product</title>
-<link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body>
   <div class="container">
-
     <nav class="nav">
       <a href="/" class="active">← Dashboard</a>
       <span class="nav-right" id="pdTransitBadge">Transit total: 0</span>
@@ -19,13 +18,11 @@
       <div id="pdSku" class="muted"></div>
     </header>
 
-    <!-- Stock & Ad Spend by Country (this product only) -->
+    <!-- Stock & Ad Spend -->
     <section class="section">
-      <h2>Stock &amp; Ad Spend by Country</h2>
+      <h2>Stock & Ad Spend by Country</h2>
       <table class="table">
-        <thead>
-          <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
-        </thead>
+        <thead><tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr></thead>
         <tbody id="pdStockBody"></tbody>
         <tfoot>
           <tr class="totals"><th>Totals</th><th id="pdStockTotal">0</th><th id="pdAdTotal">0</th></tr>
@@ -33,7 +30,7 @@
       </table>
     </section>
 
-    <!-- Profit + Advertising Budget (per country) – manual -->
+    <!-- Profit Budget -->
     <section class="section">
       <h2>Profit + Advertising Budget (per country)</h2>
       <div class="card">
@@ -49,9 +46,9 @@
       </table>
     </section>
 
-    <!-- Daily Ad Spend (Replace current) -->
+    <!-- Ad Spend -->
     <section class="section">
-      <h2>Daily Ad Spend (Replace current)</h2>
+      <h2>Daily Ad Spend</h2>
       <div class="card">
         <div class="row wrap">
           <select id="pdAdCountry" class="input"></select>
@@ -82,11 +79,10 @@
           <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
           <button id="pdMvAdd" class="btn">Add Movement</button>
         </div>
-        <small>China is only available for movements &amp; transit.</small>
       </div>
     </section>
 
-    <!-- Transit: China → Kenya -->
+    <!-- Transit Sections -->
     <section class="section">
       <h2>Transit (China → Kenya)</h2>
       <table class="table">
@@ -97,7 +93,6 @@
       </table>
     </section>
 
-    <!-- Transit: Inter-country -->
     <section class="section">
       <h2>Transit (Inter-country)</h2>
       <table class="table">
@@ -108,7 +103,7 @@
       </table>
     </section>
 
-    <!-- Arrived Shipments (history for this product) -->
+    <!-- Arrived Shipments -->
     <section class="section">
       <h2>Arrived Shipments</h2>
       <table class="table">
@@ -119,7 +114,7 @@
       </table>
     </section>
 
-    <!-- Remittance Entries (pulled from Performance → Remittance Report) -->
+    <!-- Remittance Entries -->
     <section class="section">
       <h2>Remittance Entries</h2>
       <table class="table">
@@ -130,17 +125,13 @@
         <tfoot>
           <tr class="totals">
             <th colspan="4">Totals</th>
-            <th id="pdRRevT">0</th>
-            <th id="pdRAdT">0</th>
-            <th id="pdRExtraT">0</th>
-            <th id="pdRProfitT">0</th>
-            <th></th>
+            <th id="pdRRevT">0</th><th id="pdRAdT">0</th><th id="pdRExtraT">0</th><th id="pdRProfitT">0</th><th></th>
           </tr>
         </tfoot>
       </table>
     </section>
 
-    <!-- Lifetime (This Product) -->
+    <!-- Lifetime Performance -->
     <section class="section">
       <h2>Lifetime (This Product)</h2>
       <div class="card">
@@ -157,8 +148,7 @@
         <tbody id="pdLPBody"></tbody>
         <tfoot>
           <tr class="totals">
-            <th>Totals</th>
-            <th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
+            <th>Totals</th><th id="pdLPRevT">0</th><th id="pdLPAdT">0</th><th id="pdLPShipT">0</th>
             <th id="pdLPBaseT">0</th><th id="pdLPPcsT">0</th><th id="pdLPProfitT">0</th>
           </tr>
         </tfoot>
@@ -201,9 +191,8 @@
         <tbody id="pdInfBody"></tbody>
       </table>
     </section>
-
   </div>
 
-<script src="/app.js" defer></script>
+  <script src="/app.js" defer></script>
 </body>
 </html>
