--- a/product.html
+++ b/product.html
@@ -56,17 +56,16 @@
       <small>The list above replaces by (product + country + platform).</small>
     </div>
 
-    <div class="section">
-      <h3>Stock Movement</h3>
-      <div class="row wrap">
-        <select id="pdMvFrom" class="input"></select>
-        <span>→</span>
-        <select id="pdMvTo" class="input"></select>
-        <input id="pdMvQty" type="number" class="input" placeholder="Qty" min="0"/>
-        <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
-        <button id="pdMvAdd" class="btn">Add Movement</button>
-      </div>
-    </div>
+<div class="section">
+  <h3>Stock Movement</h3>
+  <div class="row wrap">
+    <select id="pdMvTo" class="input"></select>
+    <input id="pdMvQty" type="number" class="input" placeholder="Qty" min="0"/>
+    <input id="pdMvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
+    <input id="pdMvNote" class="input" placeholder="Note (optional)"/>
+    <button id="pdMvAdd" class="btn">Add Movement</button>
+  </div>
+</div>
 
     <div class="section">
       <h3>Transit (China → Kenya)</h3>
@@ -83,7 +82,25 @@
         <tbody id="pdShipICBody"></tbody>
       </table>
     </div>
-
+<div class="section">
+  <h3>Arrived Shipments</h3>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Route</th>
+        <th>Qty</th>
+        <th>Ship Cost</th>
+        <th>Departed</th>
+        <th>Arrived</th>
+        <th>Days</th>
+        <th>Note</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody id="pdArrivedBody"></tbody>
+  </table>
+</div>
     <div class="section">
       <h3>Lifetime (This Product)</h3>
       <div class="row wrap">
