--- a/index.html
+++ b/index.html
@@ -140,18 +140,6 @@
               <tfoot><tr class="totals"><th>Totals</th><th id="pcRevT">0</th><th id="pcAdT">0</th><th id="pcDelT">0</th><th id="pcPiecesT">0</th><th id="pcProfitT">0</th></tr></tfoot>
             </table>
           </div>
-
-          <div class="section">
-            <h2>To-Do</h2>
-            <div class="row"><input id="todoText" class="input" placeholder="Task"/><button id="todoAdd" class="btn">Add</button></div>
-            <div id="todoList" class="todo-list"></div>
-          </div>
-
-          <div class="section">
-            <h2>Weekly To-Do</h2>
-            <div id="weeklyWrap" class="weeks"></div>
-          </div>
-
           <div class="section">
             <h2>Lifetime Product Performance</h2>
             <div class="row wrap">
@@ -166,6 +154,18 @@
               <tfoot><tr class="totals"><th colspan="2">Totals</th><th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th></tr></tfoot>
             </table>
           </div>
+          <div class="section">
+            <h2>To-Do</h2>
+            <div class="row"><input id="todoText" class="input" placeholder="Task"/><button id="todoAdd" class="btn">Add</button></div>
+            <div id="todoList" class="todo-list"></div>
+          </div>
+
+          <div class="section">
+            <h2>Weekly To-Do</h2>
+            <div id="weeklyWrap" class="weeks"></div>
+          </div>
+
+
         </section>
 
         <!-- PRODUCTS -->
@@ -224,6 +224,23 @@
               <input id="rExtra" type="number" class="input" placeholder="Extra cost / piece (USD)" min="0" step="0.01"/>
               <button id="rAdd" class="btn">Add</button>
             </div>
+                <table id="remittancesTable" class="table">
+      <thead>
+        <tr>
+          <th>Period</th>
+          <th>Product</th>
+          <th>Country</th>
+          <th>Pieces</th>
+          <th>Revenue</th>
+          <th>Ad Spend</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+</section>
+
           </div>
         </section>
 
